# eotools

./: NOTICE  README.md  decomposition.html  gaseous.html  getting_started.html  index.html  pyproject.toml  rayleigh.html  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto_doc_github_pages.yml
docs/: _quarto.yml  decomposition.qmd  gaseous.qmd  getting_started.qmd  index.qmd  rayleigh.qmd  references.bib
eotools/: absorption_MTL.csv  apply_ancillary.py  atmo_correction.py  bodhaine.py  chapman.py  dem.py  download.py  earth_radius.py  fileutils.py  gaseous_absorption.py  gaseous_correction.py  geometry.py  glint.py  odr.py  pansharp.py  rayleigh.py  rayleigh_correction.py  rayleigh_legacy.py  sensor_srf.py  solar_irradiance.py  srf.csv  srf.py  srf_eumetsat.csv  toa_reflectance.py  units.py  units_conversion.py  utils_odr.py  water.py
eotools/ancillary/: srf_eumetsat.csv
eotools/cm/: basic.py  index.py
eotools/cm/cloud/: ecostress.py  fmask.py  landsat.py  seviri.py  utils.py
eotools/pansharp/: basic.py
eotools/utils/: stats.py  tools.py
reference/: apply_ancillary.html  bodhaine.html  chapman.html  dem.html  earth_radius.html  gaseous_absorption.html  gaseous_correction.html  geometry.html  glint.html  index.html  rayleigh.html  solar_irradiance.html  srf.html  toa_reflectance.html  units.html  water.html
site_libs/bootstrap/: bootstrap-fe0c86cb616c58d2055bc5f0714d5fb3.min.css
tests/: conftest.py  samples.py  test_apply_ancillary.py  test_cloudmask.py  test_dem.py  test_earthradius.py  test_gaseous.py  test_gaseous_rayleigh.py  test_glint.py  test_rayleigh.py  test_solar_irradiance.py  test_srf.py  test_srf_odr.py  test_units.py  test_water.py
tests/cloud_mask/: test_ecostress.py  test_fmask.py  test_landsat.py  test_seviri.py
tests/pansharp/: generic.py  test_basic.py
