[project]
name = "eotools"
version = "0.1.0"
description = "A collection of tools and modules for building processing chains."
authors = [{name = "HYGEOS team"}]
requires-python = ">= 3.11"
dependencies = [
    "xarray",
    "cf-xarray",
    "pint-xarray",
    "xlrd",
]

[project.optional-dependencies]
git = [
    "core @ git+https://github.com/hygeos/core.git",
    "luts @ git+https://github.com/hygeos/luts.git",
    "eoread @ git+https://github.com/hygeos/eoread.git"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
eotools = { path = ".", editable = true, extras = ["git"]}

[tool.pixi.dependencies]
pytest-html = "*"
pytest = "*"
matplotlib-base = "*"
pytest-xdist = "*"
xarray = "*"
openpyxl = "*"
pint-xarray = "*"
cf-xarray = "*"
xlrd = "*"  # used only for get_SRF_meris

[tool.pixi.tasks]
tests = "pytest tests/"
